V5.4.1:
  * Added packages for C++ Builder XE6
  * If toAutoChangeScale is set in AutoOptions, the Virtual TreeView control now
    increases the DefaultNodeHeight if the font size is too large does not fit.
  * Improved implementation for toRestoreSelection option
  * Fixed possible AV in PaintNodeButton()
  * Now ensuring that both GetHorzScrollBarSliderRect() and
    GetVertScrollBarSliderRect() return a valid value for every code path (Thx to
    Dmitri Dmitrienko). This could cause strange out od resources exceptions with VCL
    styles enabled.
  
V5.4.0: (22 Apr 2014)
  * Added support for XE6.
  * Added new option toRestoreSelection to TVTSelectionOptions: Set to true if upon refill the previously
    elected nodes should be selected again. The nodes will be identified by its caption only.
  * Added new option toAlwaysSelectNode to TVTSelectionOption enum. If this flag is set, the treeview tries to
    lways have a node selected. This behavior is closer to the Windows TreeView and useful in Windows Explorer
    tyle applications. It is also useful for accessible applications which can indicate having the focus by
    isplaying a selection.
  * Added function TBaseVirtualTree.IsEmpty which returns True if the control has no nodes.  
  * Fixed a wrongly drawn selection after the user scrolled horizontally.
  * Fixed issue #423: Change property TVirtualTreeColumn.Tag to NativeInt. 
  * Implemented #415: Added feature for design time column header dragging and resizing. (Thx to fr0st.brutal)
  * Fixed issue #180: Memory leak in grid demo of Advanced project
  * Implemented #422: Added TBaseVirtualTree.GetFirstChildNoInit() 
  * Fixed issue #420: Add coEditable to TVTColumnOption) by applying the supplied path. Thx to Stefan Glienke.
  * Fixed issue #419: Some issues with changing to edit mode with clicking
  * Fixed issue #430: TVTDragManager memory leak with visual inheritance. Thx to Andreas Hausladen for the patch.